--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-composable-helpers": "^2.1.0",
     "ember-concurrency": "^0.8.12",
     "ember-data": "~2.18.0",
     "ember-export-application-global": "^2.0.0",
